fix:changed the h2 color in dark mode (light blue instead of yellow)

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   --bg-color: #1e1e1e;
   --text-color: #f1f1f1;
   --card-color: #2b2b2b;
-  --heading-color: yellow;
+  --heading-color: rgb(141, 141, 241);
 }
 
 body {
